<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_action_cut"
        android:title="@string/action_cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/action_copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_action_paste"
        android:title="@string/action_paste"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_hide"
        android:icon="@drawable/ic_expand_less"
        android:title="@string/action_hide"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/show_settings"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_keyboard"
        android:icon="@drawable/ic_action_keyboard"
        android:title="@string/action_keyboard"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_close"
        app:showAsAction="never"
        android:title="@string/action_close" />
</menu>